--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-minimal
-title: The Page of Nothing
-description: All the excitement is somewhere else
+title: Nothing of consequence
+description: Data Engineering and Geospatial Analysis Notes to myself
+
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme 
+
