Update _config.yml to rename title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Nothing of consequence
-description: Data Engineering and Geospatial Analysis Notes to myself
+title: Binary Pipes
+description: Data Engineering and Geospatial Analysis Notes
 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
