--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Binary Pipes
 description: Data Engineering and Geospatial Analysis Notes
 
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme 
-
